--- a/package.json
+++ b/package.json
@@ -26,8 +26,14 @@
   },
   "description": "TBD",
   "exports": {
-    "import": "./distributable-esmodule/index.js",
-    "require": "./distributable-commonjs/index.cjs"
+    "import": {
+      ".": "./distributable-esmodule/index.js",
+      "./package.json": "./package.json"
+    },
+    "require": {
+      ".": "./distributable-commonjs/index.cjs",
+      "./package.json": "./package.json"
+    }
   },
   "license": "GPL-3.0+",
   "main": "distributable-commonjs/index.cjs",
@@ -49,7 +55,7 @@
     "clean:10": "shx rm -Rf coverage distributable-commonjs distributable-esmodule process",
     "clean": "run-s --silent clean:*",
     "lint:10": "eslint --ignore-path .gitignore source",
-    "lint:20": "depcheck",
+    "lint:20": "check-dependency",
     "lint": "run-s --silent lint:*",
     "build:10": "cross-env NODE_ENV=commonjs babel source --copy-files --extensions .cjs,.js                       --out-dir distributable-commonjs --out-file-extension .cjs --source-maps",
     "build:20": "cross-env NODE_ENV=esmodule babel source --copy-files --extensions .cjs,.js --keep-file-extension --out-dir distributable-esmodule                           --source-maps",
@@ -74,27 +80,26 @@
     "@babel/preset-env": "^7.11.0",
     "@virtualpatterns/mablung-babel-plugin-replace-identifier": "git+https://github.com/virtualpatterns/mablung-babel-plugin-replace-identifier",
     "@virtualpatterns/mablung-babel-plugin-replace-string-literal": "git+https://github.com/virtualpatterns/mablung-babel-plugin-replace-string-literal",
+    "@virtualpatterns/mablung-check-dependency": "git+https://github.com/virtualpatterns/mablung-check-dependency",
     "@virtualpatterns/mablung-source-map-support": "git+https://github.com/virtualpatterns/mablung-source-map-support.git",
-    "ava": "^3.11.0",
+    "ava": "^3.11.1",
     "babel-eslint": "^10.1.0",
-    "babel-polyfill": "^6.26.0",
-    "c8": "^7.2.1",
+    "c8": "^7.3.0",
     "cross-env": "^7.0.2",
-    "depcheck": "^1.0.0",
     "eslint-plugin-babel": "^5.3.1",
     "jstransformer-babel": "^2.1.0",
     "jstransformer-cdata-js": "^1.0.0",
     "jstransformer-coffee-script": "^1.1.1",
     "jstransformer-markdown-it": "^2.1.0",
     "minimatch": "^3.0.4",
-    "npm-check-updates": "^7.0.2",
+    "npm-check-updates": "^7.0.4",
     "npm-run-all": "^4.1.5",
     "pretty": "^2.0.0",
     "pug": "^3.0.0",
     "shx": "^0.3.2"
   },
   "dependencies": {
-    "@babel/core": "^7.11.0",
+    "@babel/core": "^7.11.1",
     "@pwn/is": "^1.0.2",
     "change-case": "^4.1.1",
     "eslint": "^7.6.0",
