added __transformPath for windows

--- a/source/.eslintrc.json
+++ b/source/.eslintrc.json
@@ -8,7 +8,8 @@
   ],
   "globals": {
     "__filePath": "readonly",
-    "__require": "readonly"
+    "__require": "readonly",
+    "__transformPath": "readonly"
   },
   "parser": "babel-eslint",
   "parserOptions": {
