--- a/source/.babelrc.json
+++ b/source/.babelrc.json
@@ -14,6 +14,10 @@
               {
                 "searchFor": "__require",
                 "replaceWith": "require"
+              },
+              {
+                "searchFor": "__transformPath",
+                "replaceWith": "require.resolve"
               }
             ]
           }
@@ -78,6 +82,23 @@
                     "type": "named",
                     "name": "createRequire",
                     "source": "module"
+                  }
+                ]
+              },
+              {
+                "searchFor": "__transformPath",
+                "replaceWith": "__importIdentifier.pathToFileURL",
+                "parserOption": { 
+                  "plugins": [ "importMeta" ], 
+                  "sourceType": "module" 
+                },
+                "addImport": [
+                  {
+                    "type": "default",
+                    "source": "url",
+                    "option": {
+                      "nameHint": "URL"
+                    }
                   }
                 ]
               }
