adding properties as attributes and tests

--- a/package.json
+++ b/package.json
@@ -54,13 +54,16 @@
     "lint:10": "eslint --ignore-path .gitignore source",
     "lint:20": "check-dependency",
     "lint": "run-s --silent lint:*",
-    "build:10": "cross-env NODE_ENV=commonjs babel source --copy-files --extensions .cjs,.js                       --out-dir distributable-commonjs --out-file-extension .cjs --source-maps",
-    "build:20": "cross-env NODE_ENV=esmodule babel source --copy-files --extensions .cjs,.js --keep-file-extension --out-dir distributable-esmodule                           --source-maps",
+    "build:10": "cross-env NODE_ENV=commonjs babel source --copy-files --extensions .js --ignore source/test/library/www,source/sandbox/www                       --out-dir distributable-commonjs --out-file-extension .cjs --source-maps",
+    "build:20": "cross-env NODE_ENV=esmodule babel source --copy-files --extensions .js --ignore source/test/library/www,source/sandbox/www --keep-file-extension --out-dir distributable-esmodule                           --source-maps",
     "build": "run-s --silent clean lint build:*",
     "test:10": "c8 ava",
     "test": "run-s --silent build \"test:10 {@}\" --",
     "run:10": "node --no-warnings --unhandled-rejections=strict",
     "run": "run-s --silent build \"run:10 {@}\" --",
+    "run:server:10:skip": "live-server --host=0.0.0.0 --port=8080 --mount=/:distributable-commonjs/test/library/www-bundle --mount=/favicon.ico:distributable-commonjs/test/library/www-bundle/resource/application.ico --open=index.html --watch=distributable-commonjs/test/library/www-bundle --verbose",
+    "run:server:20": "live-server --host=0.0.0.0 --port=8081 --mount=/:distributable-esmodule/test/library/www-bundle --mount=/favicon.ico:distributable-esmodule/test/library/www-bundle/resource/application.ico --open=index.html --watch=distributable-esmodule/test/library/www-bundle --verbose",
+    "run:server": "run-p --silent run:server:*",
     "pre:push:10": "git add coverage distributable-commonjs distributable-esmodule",
     "pre:push:20": "git commit --message=\"post-test\"",
     "pre:push": "run-s --silent test pre:push:*",
@@ -88,11 +91,14 @@
     "jstransformer-cdata-js": "^1.0.0",
     "jstransformer-coffee-script": "^1.1.1",
     "jstransformer-markdown-it": "^2.1.0",
+    "live-server": "^1.2.1",
     "minimatch": "^3.0.4",
     "npm-check-updates": "^7.0.4",
     "npm-run-all": "^4.1.5",
+    "parcel-bundler": "^1.12.4",
     "pretty": "^2.0.0",
     "pug": "^3.0.0",
+    "puppeteer": "^5.2.1",
     "shx": "^0.3.2"
   },
   "dependencies": {
