--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "upgrade:20": "shx rm -f package-lock.json",
     "upgrade:30": "npm install",
     "upgrade": "run-s --silent upgrade:*",
-    "clean:10": "shx rm -Rf coverage distributable-commonjs distributable-esmodule",
+    "clean:10": "shx rm -Rf coverage distributable-commonjs distributable-esmodule process",
     "clean": "run-s --silent clean:*",
     "lint:10": "eslint --ignore-path .gitignore source",
     "lint:20": "check-dependency",
@@ -74,17 +74,17 @@
   "type": "module",
   "version": "0.0.1-11",
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/plugin-proposal-export-default-from": "^7.10.4",
+    "@babel/cli": "^7.12.1",
+    "@babel/plugin-proposal-export-default-from": "^7.12.1",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-env": "^7.12.1",
     "@virtualpatterns/mablung-babel-plugin-replace-identifier": "git+https://github.com/virtualpatterns/mablung-babel-plugin-replace-identifier",
     "@virtualpatterns/mablung-babel-plugin-replace-string-literal": "git+https://github.com/virtualpatterns/mablung-babel-plugin-replace-string-literal",
     "@virtualpatterns/mablung-check-dependency": "git+https://github.com/virtualpatterns/mablung-check-dependency",
     "@virtualpatterns/mablung-source-map-support": "git+https://github.com/virtualpatterns/mablung-source-map-support.git",
-    "ava": "^3.11.1",
+    "ava": "^3.13.0",
     "babel-eslint": "^10.1.0",
-    "c8": "^7.3.0",
+    "c8": "^7.3.4",
     "cross-env": "^7.0.2",
     "eslint-plugin-babel": "^5.3.1",
     "jstransformer-babel": "^2.1.0",
@@ -93,24 +93,25 @@
     "jstransformer-markdown-it": "^2.1.0",
     "live-server": "^1.2.1",
     "minimatch": "^3.0.4",
-    "npm-check-updates": "^7.0.4",
+    "npm-check-updates": "^9.1.0",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
     "pretty": "^2.0.0",
     "pug": "^3.0.0",
-    "puppeteer": "^5.2.1",
+    "puppeteer": "^5.3.1",
     "shx": "^0.3.2"
   },
   "dependencies": {
-    "@babel/core": "^7.11.1",
+    "@babel/core": "^7.12.3",
     "@pwn/is": "^1.0.2",
     "change-case": "^4.1.1",
-    "eslint": "^7.6.0",
+    "commander": "^6.1.0",
+    "eslint": "^7.11.0",
     "fs-extra": "^9.0.1",
     "html-to-vdom": "^0.7.0",
     "jsesc": "^3.0.1",
     "json5": "^2.1.3",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.2",
     "pug-filters": "^4.0.0",
     "pug-lexer": "^5.0.0",
     "pug-linker": "^4.0.0",
