using utility package

--- a/source/.eslintrc.json
+++ b/source/.eslintrc.json
@@ -11,26 +11,25 @@
     "__require": "readonly",
     "__transformPath": "readonly"
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
-    "requireConfigFile": true,
+    "requireConfigFile": false,
     "sourceType": "module"
   },
   "plugins": [
-    "babel"
+    "@babel"
   ],
   "rules": {
-    "arrow-parens": "error",
+    "arrow-parens": [ "error", "always" ],
     "comma-dangle": [ "error", "never" ],
-    "no-debugger": "warn",
-    "indent": [ "error", 2, { 
-      "ignoredNodes": [ "TemplateLiteral" ],
-      "SwitchCase": 1 
-      } ],
+    "indent": [ "error", 2, { "SwitchCase": 1 } ],
     "linebreak-style": [ "error", "unix" ],
     "no-console": "warn",
+    "no-debugger": "warn",
     "no-unused-vars": "warn",
-    "quotes": [ "error", "single" ],
+    "quote-props": [ "error", "always" ],
+    "quotes": [ "warn", "single" ],
     "semi": [ "error", "never" ]
   }
 }
+
