--- a/package.json
+++ b/package.json
@@ -79,6 +79,9 @@
   "version": "0.0.1-13",
   "devDependencies": {
     "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/eslint-parser": "^7.12.1",
+    "@babel/eslint-plugin": "^7.12.1",
     "@babel/plugin-proposal-export-default-from": "^7.12.1",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/preset-env": "^7.12.1",
@@ -87,10 +90,9 @@
     "@virtualpatterns/mablung-check-dependency": "git+https://github.com/virtualpatterns/mablung-check-dependency",
     "@virtualpatterns/mablung-source-map-support": "git+https://github.com/virtualpatterns/mablung-source-map-support.git",
     "ava": "^3.13.0",
-    "babel-eslint": "^10.1.0",
     "c8": "^7.3.4",
     "cross-env": "^7.0.2",
-    "eslint-plugin-babel": "^5.3.1",
+    "eslint": "^7.11.0",
     "jstransformer-babel": "^2.1.0",
     "jstransformer-cdata-js": "^1.0.0",
     "jstransformer-coffee-script": "^1.1.1",
@@ -106,11 +108,9 @@
     "shx": "^0.3.2"
   },
   "dependencies": {
-    "@babel/core": "^7.12.3",
     "@pwn/is": "^1.0.2",
     "change-case": "^4.1.1",
     "commander": "^6.1.0",
-    "eslint": "^7.11.0",
     "fs-extra": "^9.0.1",
     "html-to-vdom": "^0.7.0",
     "jsesc": "^3.0.1",
