--- a/package.json
+++ b/package.json
@@ -87,30 +87,35 @@
     "@babel/core": "^7.12.3",
     "@babel/eslint-parser": "^7.12.1",
     "@babel/eslint-plugin": "^7.12.1",
+    "@babel/parser": "^7.12.3",
     "@babel/plugin-proposal-export-default-from": "^7.12.1",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/preset-env": "^7.12.1",
+    "@babel/traverse": "^7.12.1",
     "@virtualpatterns/mablung-babel-plugin-replace-identifier": "git+https://github.com/virtualpatterns/mablung-babel-plugin-replace-identifier",
     "@virtualpatterns/mablung-babel-plugin-replace-string-literal": "git+https://github.com/virtualpatterns/mablung-babel-plugin-replace-string-literal",
     "@virtualpatterns/mablung-check-dependency": "git+https://github.com/virtualpatterns/mablung-check-dependency",
     "@virtualpatterns/mablung-source-map-support": "git+https://github.com/virtualpatterns/mablung-source-map-support.git",
     "ava": "^3.13.0",
+    "buffer": "^5.6.1",
     "c8": "^7.3.4",
     "cross-env": "^7.0.2",
-    "esbuild": "^0.7.17",
+    "esbuild": "^0.7.19",
     "eslint": "^7.11.0",
+    "events": "^3.2.0",
     "jstransformer-babel": "^2.1.0",
     "jstransformer-cdata-js": "^1.0.0",
     "jstransformer-coffee-script": "^1.1.1",
     "jstransformer-markdown-it": "^2.1.0",
     "live-server": "^1.2.1",
     "minimatch": "^3.0.4",
-    "npm-check-updates": "^9.1.0",
+    "npm-check-updates": "^9.1.2",
     "npm-run-all": "^4.1.5",
     "pretty": "^2.0.0",
     "pug": "^3.0.0",
     "puppeteer": "^5.3.1",
-    "shx": "^0.3.2"
+    "shx": "^0.3.2",
+    "touch": "^3.1.0"
   },
   "dependencies": {
     "@pwn/is": "^1.0.2",
