--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 /.cache
-/distributable-commonjs/sandbox
-/distributable-esmodule/sandbox
 /node_modules
 /process
+/release-commonjs/sandbox
+/release-esmodule/sandbox
+/source/sandbox
